--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
+    "atob": "^2.1.2",
     "aws-sdk": "^2.221.1",
+    "base-64": "^0.1.0",
+    "btoa": "^1.2.1",
     "compression": "^1.0.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.5.2",
     "express-session": "^1.17.0",
     "github-api": "^3.0.0",
     "helmet": "^1.3.0",
+    "lodash": "^4.17.19",
     "loopback": "^2.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
@@ -25,6 +29,7 @@
     "loopback-datasource-juggler": "^2.39.0",
     "moment": "^2.22.0",
     "ncp": "^2.0.0",
+    "octokat": "^0.10.0",
     "options": "0.0.6",
     "randomstring": "^1.1.5",
     "serve-favicon": "^2.0.1",
