--- a/server/model-config.json
+++ b/server/model-config.json
@@ -22,7 +22,7 @@
       "property": "resetPasswordRequest"
     }],
     "options": {
-      "emailVerificationRequired": true
+      "emailVerificationRequired": false
     }
   },
   "AccessToken": {
@@ -92,7 +92,10 @@
     "dataSource": "db",
     "public": true
   },
-  
+  "ChallengeSession": {
+    "dataSource": "db",
+    "public": true
+  },
   
   
      "Level": {
